--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: ruby
 sudo: false
+before_install:
+  - gem install bundler
+  - gem update bundler
 rvm:
-  - "2.1"
-  - "2.2"
+  - 2.3.3
+gemfile:
+  - gemfiles/rails_4.1.gemfile
+  - gemfiles/rails_4.2.gemfile
+  - gemfiles/rails_5.0.gemfile
 script: "bundle exec rake spec"
-services:
-  - redis-server
