--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,7 @@ gemfile:
   - gemfiles/rails_4.1.gemfile
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
-script: "bundle exec rake db:migrate RAILS_ENV=test ; bundle exec rake spec"
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rspec spec/
