--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,5 @@ gemfile:
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
 script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake db:test:prepare
+  - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rspec spec/
