--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: ruby
 sudo: false
-rvm:
-  - "2.1"
-  - "2.2"
-script: "bundle exec rake spec"
 services:
   - redis-server
+before_install:
+  - gem install bundler
+  - gem update bundler
+rvm:
+  - 2.3.3
+gemfile:
+  - gemfiles/rails_4.1.gemfile
+  - gemfiles/rails_4.2.gemfile
+  - gemfiles/rails_5.0.gemfile
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate
+  - bundle exec rspec spec/
