--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,13 @@ before_install:
   - gem install bundler
   - gem update bundler
 rvm:
-  - 2.3.3
+  - 2.4.0
+  - 2.5.0
+  - 2.6.0
 gemfile:
   - gemfiles/rails_5.0.gemfile
   - gemfiles/rails_5.1.gemfile
+  - gemfiles/rails_5.2.gemfile
 script:
   - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rspec spec/
