--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ sudo: false
 services:
   - redis-server
 before_install:
-  - gem install bundler
-  - gem update bundler
+  - gem install bundler -v '1.17.3'
 rvm:
   - 2.5.0
   - 2.6.5
