--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 sudo: false
 services:
   - redis-server
+  - postgresql
 before_install:
   - gem install bundler -v '1.17.3'
 rvm:
@@ -12,5 +13,6 @@ gemfile:
   - gemfiles/rails_5.2.gemfile
   - gemfiles/rails_6.0.gemfile
 script:
+  - RAILS_ENV=test bundle exec rake db:create
   - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rspec spec/
