--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ gemfile:
   - gemfiles/rails_5.2.gemfile
   - gemfiles/rails_6.0.gemfile
 script:
-  - RAILS_ENV=test db:test:prepare
+  - RAILS_ENV=test bundle exec rake db:create
+  - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rspec spec/
