--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,14 @@ sudo: false
 services:
   - redis-server
 before_install:
-  - gem install bundler
-  - gem update bundler
+  - gem install bundler -v '1.17.3'
 rvm:
-  - 2.4.0
-  - 2.5.0
-  - 2.6.0
+  - 2.5.3
+  - 2.6.5
+  - 2.7.0
 gemfile:
-  - gemfiles/rails_5.0.gemfile
-  - gemfiles/rails_5.1.gemfile
+  - gemfiles/rails_5.2.gemfile
+  - gemfiles/rails_6.0.gemfile
 script:
   - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rspec spec/
